Fix card filtering and fix user editing